2006-10-02  Stan Cox  <scox@redhat.com>

	* hpd/ExprSymTab.java (put): Check that the die has a type.
	(get): Likewise.

2006-09-29  Stan Cox  <scox@redhat.com>

	* hpd/ExprSymTab.java (getBufferAddr): Simplify DW_AT_frame_base handling.
	(put): Handle Errno.
	* hpd/CLI.java (PrintHandler.handle): Handle missing variable.

2006-09-28  Stan Cox  <scox@redhat.com>

	* hpd/CLI.java (UpDownHandler): New.
	(WhereHandler): New.
	* hpd/SymTab.java (CppSymTab): Move from here...
	* hpd/ExprSymTab.java: to here.

2006-09-22  Stan Cox  <scox@redhat.com>

	* hpd/SymTab.java (what,print): Refactor command handling from here...
	* hpd/CLI.java (what,print): to here.

2006-09-18  Stan Cox  <scox@redhat.com>

	* hpd/SymTab.java (get): Handle float and double.
	(print): Likewise.

2006-09-12  Stan Cox  <scox@redhat.com>

	* hpd/CLI.java (proc): New.
	(task): New.
	(symtab): New.
	(AttachHandler): New.
	(DetachHandler): New.
	* hpd/hpd.java: New file for standalone execution of hpd.
	* hpd/SymTab.java (symTab): New.
	(what): Use it.
	(print): Use it.
	* hpd/UserHelp.java (UserHelp): Add print, assign, what, attach, detach.
	* hpd/PrintHandler.java: Moved to SymTab.java.

2006-08-21  Stan Cox  <scox@redhat.com>

	* hpd/PrintHandler.java (handle): Add -format and hex/octal output.

2006-07-14  Stan Cox  <scox@redhat.com>

	* hpd/Command.java (getOut, setOut): New.
	* hpd/CLI.java (execCommand): Call it.
	* hpd/PrintHandler.java (PrintHandler): Change println to getOut.

2006-07-07  Ivan Pantuyev  <ipantuye@redhat.com>
	
	* hpd/DbgVariables.java: new
	* hpd/CLI.java: aliasing, variable setting added
	* hpd/UserHelp.java: help for the newly implemented commands
	
2006-07-05  Ivan Pantuyev  <ipantuye@redhat.com>

	* hpd/UserHelp.java: more commands
	* hpd/CLI.java: some work on set commands, new debugger internal commands
	* hpd/AllPTSet.java: fixed index out of bounds exception

2006-06-28  Ivan Pantuyev  <ipantuye@redhat.com>

	* hpd/UserHelp.java: new
