@@ -1,5 +1,10 @@
 2006-10-02  Stan Cox  <scox@redhat.com>
 
+	* hpd/ExprSymTab.java (getBufferAddr):  Add x86regnames to map x86
+	dwarf reg numbers to names.
+
+2006-10-02  Stan Cox  <scox@redhat.com>
+
 	* hpd/ExprSymTab.java (put): Check that the die has a type.
 	(get): Likewise.
 
